--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "array": "c",
-        "random": "c"
+        "random": "c",
+        "cmath": "c",
+        "complex": "c"
     }
 }
